# Foresight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiment_dummy/: Foresight | MIMIC | Final | Prepare data.ipynb  data_prep.ipynb  inference.ipynb  train.ipynb
foresight/datasets/: data_collator_v2.py
foresight/metrics/: timeline.py
foresight/models/: custom_GPT2.py  foresight_llama.py
foresight/tokenizers/: __init__.py  hf_map_tokenizer.py  hf_tokenizer_with_position_id_padding.py  simple_map_tokenizer_v2.py
