[tool.poetry]
name = "foresight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.0"
torch = "^2.1.2"
jupyter = "^1.0.0"
pydantic = "^2.5.3"
datasets = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
