[tool.poetry]
name = "foresight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.37.2"}
torch = "^2.1.2"
jupyter = "^1.0.0"
pydantic = "^2.5.3"
datasets = "^2.16.1"
install = "^1.3.5"
scikit-learn = "^1.4.0"
wandb = "^0.16.3"


[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
